[package]
name = "ccx_rust"
version = "0.1.0"
authors = ["PunitLodha <punitlodha@pm.me>"]
description = "Rust library for CCExtractor"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
iconv = "0.1.1"

[build-dependencies]
bindgen = "0.58.1"

[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "cargo"
genmode = "Remote"
default_gen_buildrs = true
targets = [
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.clang-sys.'1.2.0']
gen_buildrs = true